--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@ header {
 	-webkit-background-size: cover;
 	text-align: center;
 	overflow: hidden;
-	background-color: #e9d5a1;
+	background-color: #47604a;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -74,7 +74,7 @@ header {
 
 .language {
 	font-size: 25px;
-	background-color: #e9d5a1;
+	background-color: #47604a;
 	padding-bottom: 10px;
 	padding-top: 80px;
 }
@@ -108,7 +108,7 @@ header h1 {
 }
 
 #about {
-	background: #fff;
+	background: #44304b;
 	overflow: hidden;
 }
 
@@ -172,20 +172,20 @@ header h1 {
 
 .polaroid img {
 	display: block;
-	max-width: 350px;
-	max-height: 350px;
+	max-width: 500px;
+	max-height: 500px;
 }
 
 .polaroid span {
-	background: #ffffff;
+	background: #44304b;
 	display: inline-block;
 	margin: 55px 75px 30px;
 	padding: 15px 15px 30px;
 	text-align: center;
 	text-decoration: none;
-	-webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
-	-moz-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
-	box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+	// -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+	// -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+	// box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
 	-webkit-transition: all .20s linear;
 	-moz-transition: all .20s linear;
 	transition: all .20s linear;
@@ -224,7 +224,7 @@ header h1 {
 }
 
 #resume {
-	background: #efe1bd;
+	background: #47604a;
 }
 
 .experience-icon {
@@ -238,7 +238,7 @@ header h1 {
 	text-align: left !important;
 	padding: 5px 8px 5px 8px !important;
 	vertical-align: baseline;
-	background-color: #AE944F !important;
+	background-color: #6e427b !important;
 	color: white;
 	font-weight: lighter !important;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -346,7 +346,7 @@ header h1 {
 }
 
 #portfolio {
-	background: #efe1bd;
+	background: #47604a;
 	padding-bottom: 5%;
 }
 
